	7458 Fortune Horn:	It's a custom name ^^;
	12016 Speed Increasing Potion: A potion which increases the moving speed of a character for a duration.
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
05/29
	* Fixed Green Ale's effect, thanks to NLZ. [MasterOfMuppets]
05/28
	* Readded some aDelay fixes which were accidentaly reverted [Playtester]
05/26
	* Added Red Chile drop to Kraben & small aMotion fix [Playtester]
	* Added missing Odin drops (guessed) [Playtester]
	* Updated Kiel and added Odin mob drops [Playtester]
	- low drop rates as long as not known
	- still missing Makeup Kit, Angel Hairband and not sure which Survivor's Rod
	* Fixed 12106,Jeweled_Box. Now giving an accessory [Lupus]
05/25
	* Modified some drops and added drops to Ferus and Dragon Egg [Playtester]
	* Updated the Exp of some mobs accordings to the last kRO patch thanks to Muad_Dib [Playtester]
	* More fixes on MVP exp and changed some mob modes [Playtester]
	* Fixed Sidewinder card to raise the chance of Double Attack if you have mastered it [Playtester]
	* MVP Exp is now 1/2 of the Base Exp as pointed out by Tharis [Playtester]
	- Removed MVP drops of Hydro and Event Kiel as they are supposely no MVPs
05/24
	* Added cooking drops to the mob_db [Playtester]
	* Final Aegis X.2 update [Playtester]
	- added mob_db_a.txt in case someone wants to use 100% official X.2 drop rates
	- now starting to add after-X.2 drops
05/23
	* Amon Ra now uses Meteor Storm on self until we find out how it really works [Playtester]
05/21
	* Incantation Samurai Card now ignores def of all non-boss races [Playtester]
	- should include players now
05/19
	* Major fix to the mob_skill_db [Playtester]
	- traps are now placed around2 rather than self
	- all idle skills should work now
	* More fixes on Amon Ra [Playtester]
	* Fixed Bascojin's mob summoning [Playtester]
	* Fixed some SPRITE names of mobs [Playtester]