@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/05/29
+	* Removed Undead being inmune to poison status. [Skotlex]
+	* Removed speed penalty from SC_SKA [Skotlex]
+	* Fixed SC_SPURT triggering on Soul Linkers. [Skotlex]
+	* SC_DODGE won't be dispelled on death now. [Skotlex]
 	* [Fixed]:
 	  - pc_follow_timer possible triggering crash.
 	  - pc_reg_received to use battle_status.hp instead of status.hp
